# SwarmieOS

./: .gitignore  .gitmodules  README.md  SwarmieInstall.md  run.sh
arduino/swarmie_control/: swarmie_control.ino
arduino/swarmie_control_imu_wheel/: swarmie_control_imu_wheel.ino
launch/: lab_tags_detection.launch  rover_gui.launch  testing.launch
misc/: deploy_calibration.sh  deploy_covariance.sh  deploy_host.sh  playbook_humble.yaml  rover_onboard_node_launch.sh
misc/ansible/: demo_setup_playbook.yaml  deply_playbook.yaml  inventory
src/ESS/Chicken/mobility/src/mobility/behavior/: search.py
src/ESS/Chicken/scripts/: core.py  task.py
src/ESS/Chicken/src/mobility/behavior/: search.py
src/ESS/Johnny5/mobility/scripts/: core.py  task.py
src/ESS/Johnny5/mobility/src/mobility/behavior/: search.py
src/ESS/Unicorns/mobility/camera_info/: ceiling_camera.yaml
src/ESS/Unicorns/mobility/scripts/: core.py  task.py
src/ESS/Unicorns/mobility/src/mobility/behavior/: search.py
src/ESS/purple/mobility/scripts/: core.py  task.py
src/ESS/purple/mobility/src/mobility/behavior/: search.py
src/apritags2to1/: CMakeLists.txt
src/bridge/: CMakeLists.txt  abridge.yaml  package.xml
src/bridge/src/: abridge.cpp
src/diagnostics/: CMakeLists.txt
src/diagnostics/scripts/: diags_node.py
src/diagnostics/src/diagnostics/: watcher.py
src/gazebo_plugins/: CMakeLists.txt
src/mapping/: CMakeLists.txt  package.xml
src/mapping/src/: mapping.cpp
src/mobility/: CMakeLists.txt  package.xml
src/mobility/camera_info/: head_camera.yaml
src/mobility/scripts/: cal_imu.py  coordinate.py  core.py  home_transform.py  imu_covariance.py  rdb.py  targets_block_location.py  task.py  teleop_keyboard.py  test_square.py
src/mobility/src/mobility/: __init__.py  driver.py  planner.py  swarmie.py  utils.py
src/mobility/src/mobility/behavior/: calibrate_imu.py  dropoff.py  escape_home.py  find_home_corner.py  gohome.py  init.py  pickup.py  queue.py  search.py
src/rqt_rover_gui/: CMakeLists.txt
src/rqt_rover_gui/src/: GazeboSimManager.cpp  rover_gui_plugin.cpp  rover_gui_plugin.h
src/swarmie/: CMakeLists.txt
src/swarmie/launch/: apriltags.xml  swarmie.xml
src/swarmie_msgs/: CMakeLists.txt  package.xml
src/swarmie_msgs/msg/: HomeTransformAuthority.msg  PidState.msg
